--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.1.5</spring-boot-admin.version>
+		<docker.image.prefix>cuongysl</docker.image.prefix>
 	</properties>
 
 	<dependencies>
