--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 #logging.level.org.springframework.data.jpa=DEBUG
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 logging.path=/tmp/log/crazy/
